# taqsim-hydrology

./: .gitignore  CLAUDE.md  Makefile  README.md  init.sh  pyproject.toml
scratchpad/: goals.md
src/taqsim_hydrology/: __init__.py
src/taqsim_hydrology/documentation/losses/: 01_overview.md
src/taqsim_hydrology/documentation/routing/: 01_overview.md  02_muskingum.md  03_linear_reservoir.md  04_lag.md
src/taqsim_hydrology/documentation/sources/: 01_overview.md
src/taqsim_hydrology/routing/: __init__.py  lag.py  linear_reservoir.py  muskingum.py
tests/test_routing/: test_lag.py  test_linear_reservoir.py  test_muskingum.py
